Bug 341293 - Kleopatra self-test should not expect gpg-agent to be running for GnuPG >= 2.1
Summary: Kleopatra self-test should not expect gpg-agent to be running for GnuPG >= 2.1
Status: RESOLVED FIXED
Alias: None
Product: kleopatra
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-26 15:56 UTC by Tim Ruffing
Modified: 2016-02-19 17:27 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Ruffing 2014-11-26 15:56:43 UTC
GnuPG 2.1 autostarts the gpg-agent on demand. Thus the self-test in kleopatra should not fail if it cannot connect to gpg-agent.

Additionally, the text that explains the failure is wrong, because it refers to GPG_AGENT_INFO, which is not used anymore.

Reproducible: Always

Steps to Reproduce:
1. Make sure gpg-agent is not running
2. Run kleopatra self-test

Actual Results:  
The test "Gpg-Agent Connectivity" fails.

Expected Results:  
The test should succeed. There is no problem, because gpg-agent will be started on demand.
Comment 1 Tim Ruffing 2014-11-26 15:58:54 UTC
This is one concrete instance of bug 340677.
Bug 340676 is a similar issue in KGPG.
Comment 2 Andre Heinecke 2016-02-19 17:18:03 UTC
Sorry for the delay, I'm still autostarting gpg-agent on my system (as I use gpg-agent for SSH) and so I have not noticed this.

But you are right. I'll fix it.
Comment 3 Andre Heinecke 2016-02-19 17:27:43 UTC
Git commit cf2d87748a9204552f9e52e26743f8fa651e9f05 by Andre Heinecke.
Committed on 19/02/2016 at 17:25.
Pushed by aheinecke into branch 'master'.

Assume we have a gpg-agent for 2.1.x gnupg

With 2.1 the gpg-agent is no longer optional. It's also
started by GnuPG itself so we no longer have to check for
installation / configuration problems regarding the gpg-agent.

M  +6    -0    kleopatra/selftest/gpgagentcheck.cpp

http://commits.kde.org/kdepim/cf2d87748a9204552f9e52e26743f8fa651e9f05