Assume we have a gpg-agent for 2.1.x gnupg

With 2.1 the gpg-agent is no longer optional. It's also
started by GnuPG itself so we no longer have to check for
installation / configuration problems regarding the gpg-agent.

BUG: 341293